--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <!-- saved from url=(0066)https://cs.stanford.edu/people/karpathy/convnetjs/demo/rldemo.html -->
 <html lang="en"><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-  <!-- <script src="./rldemo_files/convnet.js"></script> -->
+  <script src="./rldemo_files/convnet.js"></script>
   <script src="./rldemo_files/util.js"></script>
   <script src="./rldemo_files/vis.js"></script>
   <script src="./rldemo_files/deepqlearn.js"></script>
@@ -29,36 +29,6 @@
 
 
   <script type="application/javascript">
-    var return_v = false;
-    var v_val = 0.0;
-
-    function gaussRandom() {
-      if (return_v) {
-        return_v = false;
-        return v_val;
-      }
-      var u = 2 * Math.random() - 1;
-      var v = 2 * Math.random() - 1;
-      var r = u * u + v * v;
-      if (r == 0 || r > 1) return gaussRandom();
-      var c = Math.sqrt(-2 * Math.log(r) / r);
-      v_val = v * c; // cache this
-      return_v = true;
-      return u * c;
-    }
-
-    function randf(a, b) {
-      return Math.random() * (b - a) + a;
-    }
-
-    function randi(a, b) {
-      return Math.floor(Math.random() * (b - a) + a);
-    }
-
-    function randn(mu, std) {
-      return mu + gaussRandom() * std;
-    }
-
     var canvas, ctx;
     
     // A 2D vector utility
@@ -228,9 +198,9 @@
       // set up food and poison
       this.items = []
       for(var k=0;k<items_total;k++) {
-        var x = randf(20, this.W-20);
-        var y = randf(20, this.H-20);
-        var t = randi(1, 3); // food or poison (1 and 2)
+        var x = convnetjs.randf(20, this.W-20);
+        var y = convnetjs.randf(20, this.H-20);
+        var t = convnetjs.randi(1, 3); // food or poison (1 and 2)
         var it = new Item(x, y, t);
         this.items.push(it);
       }
@@ -383,7 +353,7 @@
           }
           
           //clean up old food or food that falls off screen
-          if((it.age > 5000 && this.clock % 10 === 0 && randf(0,1)<0.1 )| it.p.x > this.W-30 | it.p.y > this.H-33 | it.p.x < 5 | it.p.y <5) {
+          if((it.age > 5000 && this.clock % 10 === 0 && convnetjs.randf(0,1)<0.1 )| it.p.x > this.W-30 | it.p.y > this.H-33 | it.p.x < 5 | it.p.y <5) {
             it.cleanup_ = true; // replace this one, has been around too long
             update_items = true;
           }
@@ -398,10 +368,10 @@
         }
         //console.log(this.items.length)
 
-        if((this.items.length < items_total && this.clock % 2 === 0 && randf(0,1)<0.25)) {
-          var newitx = randf(1, this.W-20-xspd*2);  //multiple by speed
-          var newity = randf(1, this.H-20-yspd*2);
-          var newitt = randi(1, 3); // food or poison (1 and 2)
+        if((this.items.length < items_total && this.clock % 2 === 0 && convnetjs.randf(0,1)<0.25)) {
+          var newitx = convnetjs.randf(1, this.W-20-xspd*2);  //multiple by speed
+          var newity = convnetjs.randf(1, this.H-20-yspd*2);
+          var newitt = convnetjs.randi(1, 3); // food or poison (1 and 2)
           var newit = new Item(newitx, newity, newitt);
           this.items.push(newit);
         }
